--- a/index.html
+++ b/index.html
@@ -98,10 +98,38 @@
     </div>
   </div>
 </section>
-
 <!-- Modal para ver imagen grande -->
 <div id="modalZoom" class="fixed inset-0 z-50 hidden bg-black bg-opacity-80 flex items-center justify-center">
   <img id="zoomedImg" src="" class="max-w-full max-h-full object-contain transition-transform duration-300 ease-in-out" />
 </div>
+
+<!-- Sección de botones que redirigen -->
+<section class="mt-20 text-center">
+  <h2 class="text-[20px] font-semibold mb-6">MENÚ</h2>
+
+  <div class="flex flex-col items-center gap-2.5 pb-[20px]">
+    <a href="citas.html">
+      <button class="bg-pink-200 hover:bg-pink-300 text-black font-medium py-2 w-[280px] h-[45px] rounded-full shadow-md transition">
+        CITAS
+      </button>
+    </a>
+    <a href="cartas.html">
+      <button class="bg-pink-200 hover:bg-pink-300 text-black font-medium py-2 w-[280px] h-[45px] rounded-full shadow-md transition">
+        CARTAS
+      </button>
+    </a>
+    <a href="canciones.html">
+      <button class="bg-pink-200 hover:bg-pink-300 text-black font-medium py-2 w-[280px] h-[45px] rounded-full shadow-md transition">
+        CANCIONES
+      </button>
+    </a>
+    <a href="gifts.html">
+      <button class="bg-pink-200 hover:bg-pink-300 text-black font-medium pb-[10px] py-2 w-[280px] h-[45px] rounded-full shadow-md transition">
+        GIFTS
+      </button>
+    </a>
+  </div>
+</section>
+
 </body>
 </html>
