--- a/index.html
+++ b/index.html
@@ -102,6 +102,19 @@
 <div id="modalZoom" class="fixed inset-0 z-50 hidden bg-black bg-opacity-80 flex items-center justify-center">
   <img id="zoomedImg" src="" class="max-w-full max-h-full object-contain transition-transform duration-300 ease-in-out" />
 </div>
+<!-- Sección de mensaje de amor -->
+<section class="mt-20 px-6 text-center">
+  <div class="max-w-xl mx-auto bg-gray-100 rounded-xl p-6 shadow-md">
+    <p class="text-lg font-medium text-gray-800 leading-relaxed">
+      Desde que llegaste a mi vida, todo tiene más sentido. <br />
+      Eres mi alegría diaria, mi paz y mi inspiración. <br />
+      Gracias por ser tú, por cada sonrisa, por cada momento compartido. <br />
+      Te amo con todo mi corazón, <span class="font-semibold">Miri</span>. <br /><br />
+      — Gian 💖
+    </p>
+  </div>
+</section>
+
 
 <!-- Sección de botones que redirigen -->
 <section class="mt-20 text-center">
