--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 </div>
 <!-- Sección de mensaje de amor -->
 <section class="mt-20 px-6 text-center">
-  <div class="max-w-xl mx-auto bg-gray-100 rounded-xl p-6 shadow-md">
+  <div class="max-w-xl mx-auto bg-gray-100 rounded-xl p-6 shadow-md hover:bg-pink-300">
     <p class="text-lg font-medium text-gray-800 leading-relaxed">
       Desde que llegaste a mi vida, todo tiene más sentido. <br />
       Eres mi alegría diaria, mi paz y mi inspiración. <br />
@@ -122,22 +122,22 @@
 
   <div class="flex flex-col items-center gap-2.5 pb-[20px]">
     <a href="citas.html">
-      <button class="bg-pink-200 hover:bg-pink-300 text-black font-medium py-2 w-[280px] h-[45px] rounded-full shadow-md transition">
+      <button class="bg-gray-100 hover:bg-pink-300 text-black font-medium py-2 w-[280px] h-[45px] rounded-full shadow-md transition">
         CITAS
       </button>
     </a>
     <a href="cartas.html">
-      <button class="bg-pink-200 hover:bg-pink-300 text-black font-medium py-2 w-[280px] h-[45px] rounded-full shadow-md transition">
+      <button class="bg-gray-100 hover:bg-pink-300 text-black font-medium py-2 w-[280px] h-[45px] rounded-full shadow-md transition">
         CARTAS
       </button>
     </a>
     <a href="canciones.html">
-      <button class="bg-pink-200 hover:bg-pink-300 text-black font-medium py-2 w-[280px] h-[45px] rounded-full shadow-md transition">
+      <button class="bg-gray-100 hover:bg-pink-300 text-black font-medium py-2 w-[280px] h-[45px] rounded-full shadow-md transition">
         CANCIONES
       </button>
     </a>
     <a href="gifts.html">
-      <button class="bg-pink-200 hover:bg-pink-300 text-black font-medium pb-[10px] py-2 w-[280px] h-[45px] rounded-full shadow-md transition">
+      <button class="bg-gray-100 hover:bg-pink-300 text-black font-medium pb-[10px] py-2 w-[280px] h-[45px] rounded-full shadow-md transition">
         GIFTS
       </button>
     </a>
