--- a/index.html
+++ b/index.html
@@ -138,6 +138,35 @@
       </p>
     </div>
   </section>
-
+  <!-- Nueva sección con 3 imágenes y fechas abajo a la izquierda -->
+  <section class="mt-20 mb-6 max-w-5xl mx-auto px-4">
+    <h2 class="text-center text-[20px] font-semibold mb-6 underline">FLORES </h2>
+    <div class="flex justify-between gap-4">
+  
+      <div class="relative w-1/3 rounded overflow-hidden shadow-lg cursor-pointer">
+        <img src="./WhatsApp Image 2025-05-15 at 10.05.40 PM.jpeg" alt="Imagen 1" class="w-full h-48 object-cover zoomable" />
+        <div class="absolute bottom-2 left-2 bg-black bg-opacity-60 text-white text-xs px-2 py-1 rounded select-none">
+          03/03/2025
+        </div>
+      </div>
+  
+      <div class="relative w-1/3 rounded overflow-hidden shadow-lg cursor-pointer">
+        <img src="./WhatsApp Image 2025-05-15 at 10.10.38 PM.jpeg" alt="Imagen 2" class="w-full h-48 object-cover zoomable" />
+        <div class="absolute bottom-2 left-2 bg-black bg-opacity-60 text-white text-xs px-2 py-1 rounded select-none">
+          21/03/2025
+        </div>
+      </div>
+  
+      <div class="relative w-1/3 rounded overflow-hidden shadow-lg cursor-pointer">
+        <img src="./WhatsApp Image 2025-05-15 at 10.06.02 PM.jpeg" alt="Imagen 3" class="w-full h-48 object-cover zoomable" />
+        <div class="absolute bottom-2 left-2 bg-black bg-opacity-60 text-white text-xs px-2 py-1 rounded select-none">
+          28/04/2025
+        </div>
+      </div>
+  
+    </div>
+  </section>
+  
+  
 </body>
 </html>
