--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
 <div id="sidebar" class="fixed top-0 left-0 h-full w-64 bg-white shadow-md transform -translate-x-full transition-transform duration-300 z-40">
   <div class="p-4 border-b text-lg font-semibold text-center">Menú</div>
   <nav class="flex flex-col p-4 space-y-4">
-    <a href="citas.html" class="hover:underline">Citas</a>
-    <a href="cartas.html" class="hover:underline">Cartas</a>
-    <a href="canciones.html" class="hover:underline">Canciones</a>
-    <a href="gifts.html" class="hover:underline">Gifts</a>
+    <a href="fotos.html" class="hover:underline">Fotos de nosotros</a>
+    <a href="citas.html" class="hover:underline">C...</a>
+    <a href="cartas.html" class="hover:underline">C...</a>
+    <a href="canciones.html" class="hover:underline">C..</a>
+    <a href="teamo.html" class="strocke hover:underline">T...</a>
   </nav>
 </div>
 
@@ -65,7 +66,7 @@
         </div>
 
         <div class="relative flex-shrink-0 w-full h-full">
-          <img src="./WhatsApp Image 2025-05-15 at 7.36.50 PM.jpeg" alt="Image 5" class="w-full h-full object-cover" />
+          <img src="./WhatsApp Image 2025-05-15 at 10.25.03 PM.jpeg" alt="Image 5" class="w-full h-full object-cover" />
           <div class="absolute inset-0 bg-black opacity-40 rounded-[10px]"></div>
         </div>
 
@@ -129,6 +130,7 @@
   <!-- Mensaje de amor -->
   <section class="mt-20 mb-6 px-6 text-center">
     <div class="max-w-xl mx-auto bg-gray-100 rounded-xl p-6 shadow-md">
+      <h2 class="text-2xl font-semibold mb-4 text-red-600">Mensaje Para Miri 💖</h2>
       <p class="text-lg font-medium text-gray-800 leading-relaxed">
         Desde que llegaste a mi vida, todo tiene más sentido. <br />
         Eres mi alegría diaria, mi paz y mi inspiración. <br />
@@ -166,7 +168,32 @@
   
     </div>
   </section>
+  <section class="mt-14 mb-4 mx-auto px-4">
+    <h2 class="text-center text-[20px] font-semibold mb-6 underline">REGALITOS</h2>
+    <div class="flex justify-center gap-4">
   
+      <div class="relative w-1/3 rounded overflow-hidden shadow-lg cursor-pointer">
+        <img src="./WhatsApp Image 2025-05-15 at 10.36.47 PM.jpeg" alt="Imagen 4" class="w-full h-60 object-cover zoomable" />
+        <div class="absolute bottom-2 left-2 bg-black bg-opacity-60 text-white text-xs px-2 py-1 rounded select-none">
+          30/03/2025
+        </div>
+      </div>
   
+      <div class="relative w-1/3 rounded overflow-hidden shadow-lg cursor-pointer bg-black">
+        <img src="./WhatsApp Image 2025-05-15 at 10.32.20 PM.jpeg" alt="Imagen 5" class="w-full h-60 object-cover zoomable opacity-60" />
+        <div class="absolute bottom-2 left-2 bg-black bg-opacity-60 text-white text-xs px-2 py-1 rounded select-none">
+          30/03/2025
+        </div>
+      </div>
+  
+    </div>
+  </section>
+  <section class="mt-20 mb-10 mx-[20px] text-center max-w-xl bg-white bg-opacity-80 rounded-xl p-6 shadow-md">
+    <p class="text-lg text-gray-700 mb-6 leading-relaxed">
+      Hola Miri, esta página aún está en desarrollo.<br/>
+      Poco a poco iré agregando más cositas lindas y detalles.<br/>
+    </p>
+    <p class="text-sm text-gray-500 italic">Página en construcción, vuelve pronto para ver las novedades.</p>
+  </section>
 </body>
 </html>
