--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
   <nav class="bg-beige fixed inset-x-0 top-0 z-50 shadow-soft border-b border-lightbrown">
     <div class="max-w-6xl mx-auto flex items-center justify-between px-6 py-4">
       <a href="#" class="text-darkbrown font-serif text-2xl font-bold tracking-wide select-text hover:text-mediumbrown transition">
-        Mirannys &amp; Gian
+        Miriannys &amp; Gian
       </a>
       <ul
         id="navMenu"
@@ -210,7 +210,7 @@
     <!-- Countdown header -->
     <header class="text-center space-y-3 max-w-lg mx-auto">
       <h1 class="text-5xl font-bold text-darkbrown tracking-wide select-text drop-shadow-[0_2px_5px_rgba(150,125,100,0.2)]">
-        Mirannys &amp; Gian
+        Miriannys &amp; Gian
       </h1>
       <p class="text-mediumbrown italic text-lg select-text">
        Juntos desde <strong>3 Marzo 2025 2:54 pm</strong>
